# nonebot-plugin-maimai-qrhelper

./: .env.prod  .gitignore  .pdm-python  1.安装pdm包管理器.bat  2.进行包安装.bat  3.启动bot.bat  README.md  pyproject.toml
nonebot_plugin_maimai_qrhelper/: __main__.py  config.py
plugins/nonebot_plugin_maimai_qrhelper/: __init__.py  config.py
